--- a/Agustín/contenedor.html
+++ b/Agustín/contenedor.html
@@ -9,12 +9,12 @@
 
     <div id="contenedor">
         <ul id="lista1">
-            <li "opcion1 de la lista 1" />
-            <li "opcion2 de la lista 1" />
+            <li>opcion1 de la lista 1</li>
+            <li>opcion2 de la lista 1</li>
         </ul>
         <ul id="lista2">
-            <li "opcion1 de la lista 2" />
-            <li "opcion2 de la lista 2" />
+            <li>opcion1 de la lista 2</li>
+            <li>opcion2 de la lista 2</li>
         </ul>
     </div>
 
