--- a/Agustín/contenedor.html
+++ b/Agustín/contenedor.html
@@ -24,7 +24,18 @@
         boton.addEventListener('click', function(event) {
             let li_sel = document.getElementById("li_seleccionado").value;
             console.log( document.getElementById("lista" + li_sel).getElementsByTagName("li") );
-            document.getElementById("contenido_li_seleccionado").innerText = document.getElementById("lista" + li_sel).getElementsByTagName("li")[0] + " " + document.getElementById("lista" + li_sel).getElementsByTagName("li")[1];
+
+            if(li_sel == 1){
+                document.getElementById("contenido_li_seleccionado").innerText = document.getElementById("lista1").getElementsByTagName("li")[0] + " " + document.getElementById("lista1").getElementsByTagName("li")[1];
+            }
+            else if(li_sel == 2){
+                document.getElementById("contenido_li_seleccionado").innerText = document.getElementById("lista2").getElementsByTagName("li")[0] + " " + document.getElementById("lista2").getElementsByTagName("li")[1];
+            }
+
+ 
+
+
+
         });
 
     </script>
