--- a/Ejemplo6.html
+++ b/Ejemplo6.html
@@ -1,14 +1,18 @@
 	<html>
-	<head></head>
+	<head>
+		<script>
+		function clonardiv(varx){
+		var clondiv = document.getElementById('contenido').cloneNode(varx);
+		document.getElementById('boton1').parentNode.insertBefore(clondiv,document.getElementById('boton1'));
+		}
+		</script>
+	</head>
 	<body>
 	<div id ="contenido">	
 		<p>Un Párrafo</p>
 		<p>Otro párrafo</p>
     </div>
-	<script>
-		var nuevo_parrafo = document.createElement('p').appendChild(document.createTextNode('Parrafo nuevo'));
-		var segundo_parrafo = document.getElementById('contenido').getElementsByTagName('p')[1];
-		document.getElementById('contenido').insertBefore(nuevo_parrafo,segundo_parrafo);
-	</script>
+	<button id="boton1" onclick="clonardiv(true)">Click</button>
+
 	</body>
 	<html>
